appId: io.wavect.offlinery
---
- launchApp
- runFlow: main.e2e.yaml
- tapOn:
      id: "tab-settings"
- swipe:
      start: "50%,80%"
      end: "50%,20%"
      duration: 500
- tapOn:
      id: "button-change-password"

# set new PWD
- tapOn:
      id: "old-password"
- inputText:
      id: "old-password"
      text: "TeSTmE93!pQ"

# set new PWD
- tapOn:
      id: "new-password"
- inputText:
      id: "new-password"
      text: "NewPassword123!"

# set new PWD
- tapOn:
      id: "new-password-repeat"
- inputText:
      id: "new-password-repeat"
      text: "NewPassword123!"

# Confirm PWD
- tapOn:
      id: "pwd-change-confirm"

# Reset it back
- tapOn:
      id: "button-change-password"

# set new PWD
- tapOn:
      id: "old-password"
- inputText:
      id: "old-password"
      text: "NewPassword123!"

# set new PWD
- tapOn:
      id: "new-password"
- inputText:
      id: "new-password"
      text: "TeSTmE93!pQ"

# set new PWD
- tapOn:
      id: "new-password-repeat"
- inputText:
      id: "new-password-repeat"
      text: "TeSTmE93!pQ"

# Confirm PWD
- tapOn:
      id: "pwd-change-confirm"
